continued nodejs code along with nosql & templates

--- a/external-resources/additionals/another-nodejs-crash-course/clients-servers/views/404.ejs
+++ b/external-resources/additionals/another-nodejs-crash-course/clients-servers/views/404.ejs
@@ -1,15 +1,18 @@
 <html lang="en">
 
-<head>
+<!-- <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 page</title>
-</head>
+    <title>404 page | <%= title %></title>
+</head> -->
+
+<!-- including head from partials -->
+<%- include('./partials/head.ejs') %>
 
 <body>
 
-    <div class="site-title">
+    <!-- <div class="site-title">
         <h1>hallo allemaal</h1>
         <h2>hoe gaat het vriend</h2>
     </div>
@@ -18,11 +21,17 @@
         <li><a href="/">Blogs</a></li>
         <li><a href="/about">About</a></li>
         <li><a href="/blogs/create">New blog</a></li>
-    </ul>
+    </ul> -->
+
+    <!-- including nav from partials -->
+    <%- include('./partials/nav.ejs') %>
 
     <div class="not-found content">
         <h3>Oppsiiees, page not found</h3>
     </div>
+
+    <!-- including footer from partials -->
+    <%- include('./partials/footer.ejs') %>
 
 </body>
 
