--- a/external-resources/additionals/another-nodejs-crash-course/clients-servers/views/create.ejs
+++ b/external-resources/additionals/another-nodejs-crash-course/clients-servers/views/create.ejs
@@ -1,24 +1,19 @@
 <html lang="en">
 
-<head>
+<!-- <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create blog</title>
-</head>
+    <title>Create blog | <%= title %></title>
+</head> -->
+
+<!-- including head from partials -->
+<%- include('./partials/head.ejs') %>
 
 <body>
 
-    <div class="site-title">
-        <h1>hallo allemaal</h1>
-        <h2>hoe gaat het vriend</h2>
-    </div>
-
-    <ul>
-        <li><a href="/">Blogs</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/blogs/create">New blog</a></li>
-    </ul>
+    <!-- including nav from partials -->
+    <%- include('./partials/nav.ejs') %>
 
     <div class="create-blog content">
         <form>
@@ -31,6 +26,9 @@
             <button>Submit</button>
         </form>
     </div>
+
+    <!-- including footer from partials -->
+    <%- include('./partials/footer.ejs') %>
 
 </body>
 
