another attempt to understand this tutorial is on
after going through most of this tutorial decided to go through it again for more clarity and understanding

--- a/external-resources/additionals/another-nodejs-crash-course/clients-servers/views/index.ejs
+++ b/external-resources/additionals/another-nodejs-crash-course/clients-servers/views/index.ejs
@@ -37,8 +37,11 @@
         <!-- now we will be accessing dynamic values that was sent from render method as server response -->
         <% if(blogs.length > 0) { %>
             <% blogs.forEach(blog => { %>
-                <h3 class="title"><%= blog.title %></h3>
-                <p class="snippet"><%= blog.snippet %></p>
+                <!-- making each blog clickable, so that we can also have access to their id property for individual routing -->
+                <a class="single" href="/blogs/<%= blog._id %>">
+                    <h3 class="title"><%= blog.title %></h3>
+                    <p class="snippet"><%= blog.snippet %></p>
+                </a>
             <% }) %>
         <% } else { %>
             <p>There are no blogs to display</p>
