--- a/external-resources/additionals/another-nodejs-crash-course/clients-servers/views/create.ejs
+++ b/external-resources/additionals/another-nodejs-crash-course/clients-servers/views/create.ejs
@@ -16,13 +16,14 @@
     <%- include('./partials/nav.ejs') %>
 
     <div class="create-blog content">
-        <form>
+        <!-- making this form post request ready -->
+        <form action="/blogs" method="post">
             <label for="title">log title: </label>
-            <input type="text" id="title" required>
+            <input type="text" id="title" required name="title">
             <label for="snippet">Blog snippet: </label>
-            <input type="text" id="snippet" required>
+            <input type="text" id="snippet" name="snippet" required>
             <label for="body">Blog body</label>
-            <textarea type="text" id="body" required></textarea>
+            <textarea type="text" id="body" name="body" required></textarea>
             <button>Submit</button>
         </form>
     </div>
