finished with nodejs tutorial code along
also fixed previous issue with 'create-new-blog' from earlier attempt and improved upon it by introducing mvc modularity

--- a/external-resources/additionals/another-nodejs-crash-course/clients-servers/views/partials/head.ejs
+++ b/external-resources/additionals/another-nodejs-crash-course/clients-servers/views/partials/head.ejs
@@ -12,8 +12,8 @@
     <!-- <link rel="stylesheet" href="../../styles-not-added.css"> -->
 
     <!-- this style file is going to be served from 'public' folder which is specified from express.statc in app.js -->
-    <link rel="stylesheet" href="./styles.css">
-    <style>
+    <link rel="stylesheet" href="/styles.css">
+    <!-- <style>
         .create-blog form {
             max-width: 400px;
             margin: 0 auto;
@@ -45,5 +45,5 @@
             font-size: 1.2em;
             cursor: pointer;
         }
-    </style>
+    </style> -->
 </head>
