--- a/external-resources/additionals/another-nodejs-crash-course/clients-servers/views/blogs/create.ejs
+++ b/external-resources/additionals/another-nodejs-crash-course/clients-servers/views/blogs/create.ejs
@@ -8,12 +8,12 @@
 </head> -->
 
 <!-- including head from partials -->
-<%- include('./partials/head.ejs') %>
+<%- include('../partials/head.ejs') %>
 
 <body>
 
     <!-- including nav from partials -->
-    <%- include('./partials/nav.ejs') %>
+    <%- include('../partials/nav.ejs') %>
 
     <div class="create-blog content">
         <!-- making this form post request ready -->
@@ -29,7 +29,7 @@
     </div>
 
     <!-- including footer from partials -->
-    <%- include('./partials/footer.ejs') %>
+    <%- include('../partials/footer.ejs') %>
 
 </body>
 
