--- a/external-resources/additionals/another-nodejs-crash-course/clients-servers/views/blogs/details.ejs
+++ b/external-resources/additionals/another-nodejs-crash-course/clients-servers/views/blogs/details.ejs
@@ -1,18 +1,21 @@
 <html lang="en">
-<%- include("./partials/head.ejs") %>
+<%- include("../partials/head.ejs") %>
 
 <body>
-  <%- include("./partials/nav.ejs") %>
+  <%- include("../partials/nav.ejs") %>
 
   <div class="details content">
     <h2><%= blog.title %></h2>
     <div class="content">
       <p><%= blog.body %></p>
     </div>
-    <a class="delete" data-doc="<%= blog._id %>" >delete</a>
+    <!-- <a class="delete" data-doc="<%= blog._id %>" >delete</a> -->
+    <a class="delete" data-doc="<%= blog._id %>" >
+      <img src="/trashcan.svg" alt="click here to delete this blog" />
+    </a>
   </div>
 
-  <%- include("./partials/footer.ejs") %>
+  <%- include("../partials/footer.ejs") %>
 
   <script>
     let trashCan = document.querySelector('a.delete');
