--- a/external-resources/additionals/another-nodejs-crash-course/clients-servers/views/blogs/index.ejs
+++ b/external-resources/additionals/another-nodejs-crash-course/clients-servers/views/blogs/index.ejs
@@ -9,7 +9,7 @@
 </head> -->
 
 <!-- including head from partials -->
-<%- include('./partials/head.ejs') %>
+<%- include('../partials/head.ejs') %>
 
 <body>
     <!-- using ejs dynamic value -->
@@ -29,7 +29,7 @@
     </ul> -->
 
     <!-- including nav from partials -->
-    <%- include('./partials/nav.ejs') %>
+    <%- include('../partials/nav.ejs') %>
 
     <div class="blogs content">
         <h3>All blogs</h3>
@@ -38,10 +38,14 @@
         <% if(blogs.length > 0) { %>
             <% blogs.forEach(blog => { %>
                 <!-- making each blog clickable, so that we can also have access to their id property for individual routing -->
+                <!-- <a class="single" href="/blogs/<%= blog._id %>">
+                    <h3 class="title"><%= blog.title %></h3>
+                    <p class="snippet"><%= blog.snippet %></p>
+                </a> -->
                 <a class="single" href="/blogs/<%= blog._id %>">
                     <h3 class="title"><%= blog.title %></h3>
                     <p class="snippet"><%= blog.snippet %></p>
-                </a>
+                  </a>
             <% }) %>
         <% } else { %>
             <p>There are no blogs to display</p>
@@ -49,7 +53,7 @@
     </div>
 
     <!-- including footer from partials -->
-    <%- include('./partials/footer.ejs') %>
+    <%- include('../partials/footer.ejs') %>
 
 </body>
 
