--- a/projects/informational-site/views/404.html
+++ b/projects/informational-site/views/404.html
@@ -9,6 +9,13 @@
 </head>
 
 <body>
+    <nav>
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/contact">Contact</a></li>
+        </ul>
+    </nav>
     <h1>404 page....</h1>
     <p>Oppps page not found!!</p>
 </body>
