--- a/projects/informational-site/views/index.html
+++ b/projects/informational-site/views/index.html
@@ -9,6 +9,14 @@
 </head>
 
 <body>
+    <nav>
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/contact">Contact</a></li>
+        </ul>
+    </nav>
+
     <h1>Landing page....</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta eum voluptatem suscipit maiores autem
         exercitationem consectetur illo alias, ad quas commodi tempore, facilis ratione aut cumque voluptatibus cum
