mini message board app
will be trying to deploy this on to heroku from this branch

--- a/external-resources/assignments/a-simple-message-board/views/index.ejs
+++ b/external-resources/assignments/a-simple-message-board/views/index.ejs
@@ -9,6 +9,12 @@
     <p>African penguine - a.k.a. jackass, becuase of their distinct sound that they make</p>
     
     <p>Welcome to <%= title %></p>
-    <%= msgs %>
+    <% messages.forEach(item => { %>
+      <ul>
+        <li><%= item.user %> </li>
+        <li><%= item.text %> </li>
+        <li><%= item.added %> </li>
+      </ul>
+    <% }) %> 
   </body>
 </html>
