done with chapter 5 with all previous bug fixes

--- a/external-resources/assignments/mdn-express/local-library-tutorial/views/bookinstance_list.ejs
+++ b/external-resources/assignments/mdn-express/local-library-tutorial/views/bookinstance_list.ejs
@@ -22,7 +22,7 @@
                             <% } %> 
                             <% if(val.status != "Available") { %>
                                 <!-- <span class="text"> - <\%= val.due_back %> </span> -->
-                                <span class="text"> -- <%= val.due_date_formatted %> </span>
+                                <span class="text"> -- <%= val.due_back_formatted %> </span>
                             <% } %> 
                         </li>        
                     <% }) %> 
