--- a/external-resources/assignments/mdn-express/local-library-tutorial/views/author_list.ejs
+++ b/external-resources/assignments/mdn-express/local-library-tutorial/views/author_list.ejs
@@ -13,8 +13,7 @@
                     <% author_list.forEach(author => { %>
                         <!-- <li><a href=<\%= author.url %> ><\%= author.name %> </a> (<\%= author.date_of_birth %> -- <\%= author.date_of_death %> ) </li> -->
                         <!-- <li><a href=<\%= author.url %> ><\%= author.name %> </a> (<\%= author.lifespan %> ) </li> -->
-                        <!-- <li><a href=<\%= author.url %> ><\%= author.name %> </a> (<\%= author.formatted_dd %> ) </li> -->
-                        <li><a href=<%= author.url %> ><%= author.name %> </a> (<%= author.lifespan %> ) </li>
+                        <li><a href=<%= author.url %> ><%= author.name %> </a> (<%= author.formatted_dd %> ) </li>
                     <% }) %>
                     <% if(!author_list) { %>
                         <li>There are no authors</li> 
