started workign with forms

--- a/external-resources/assignments/mdn-express/local-library-tutorial/views/genre_list.ejs
+++ b/external-resources/assignments/mdn-express/local-library-tutorial/views/genre_list.ejs
@@ -11,7 +11,7 @@
                 <h1><%= title %> </h1>
                 <ul>
                     <% genre_list.forEach(genre => { %>        
-                        <li><a href=<%= genre.url %>><%= genre.name %></a></li>
+                        <li><a href=genre.url>{genre.name}</a></li>
                     <% }) %> 
                 </ul>
             </div>
