--- a/external-resources/assignments/mdn-express/local-library-tutorial/views/genre_form.ejs
+++ b/external-resources/assignments/mdn-express/local-library-tutorial/views/genre_form.ejs
@@ -12,23 +12,18 @@
                 <form action="" method="post">
                     <div class="form-group">
                         <label for="name">Genre: </label>
-                        <% if(genre === undefined) { %>
-                            <input type="text" id="name" class="form-control" placeholder="Fantasy, Poetry etc." 
-                        name="name">
-                        <% } else { %>
-                            <input type="text" id="name" class="form-control" placeholder="Fantasy, Poetry etc." 
+                        <input type="text" id="name" class="form-control" placeholder="Fantasy, Poetry etc." 
                         name="name" value=<%= genre.name === undefined ? '' : genre.name %>>
-                        <% } %>
                     </div>
                     <button class="btn btn-primary" type="submit">Submit</button>
                 </form>
-                <!-- <\% if(errors) { %>
+                <% if(errors) { %>
                     <ul>
-                        <\% errors.forEach(error => { %>
-                            <li>{error.msg}</li>
-                        <\% }) %> 
+                        <% errors.forEach(error => { %>
+                            <li><%= error.msg %></li>
+                        <% }) %> 
                     </ul>
-                <\% } %> -->
+                <% } %>
             </div>
         </div>
     </div>
