--- a/external-resources/assignments/mdn-express/local-library-tutorial/views/book_form.ejs
+++ b/external-resources/assignments/mdn-express/local-library-tutorial/views/book_form.ejs
@@ -15,46 +15,65 @@
                     <form action="" method="post">
                         <div class="form-group">
                             <label for="title">Title: </label>
-                            <input type="text" id="title" class="form-control" placeholder="Name of book" name="title"
-                                required=true value=<%= undefined===book ? '' : book.title %>
+                            <input 
+                                type="text" 
+                                id="title" 
+                                class="form-control" 
+                                placeholder="Name of book" 
+                                name="title"
+                                required=true 
+                                value=<%= undefined===book ? '' : book.title %>
                             >
                         </div>
                         <div class="form-group">
                             <label for="author">Author: </label>
-                            <select name="author" id="author" class="form-control" placeholder="Select author"
-                                required="true">
-                                <% authors.sort((a, b)=> { %>
-                                    <script>
-                                        let textA = a.family_name.toUpperCase()
-                                        let textB = b.family_name.toUpperCase()
-                                        return (textA < textB) ? -1 : (textA > textB) ? 1 : 0
-                                    </script>
-                                    <% }) %>
+                            <select 
+                                name="author" 
+                                id="author" 
+                                class="form-control" 
+                                placeholder="Select author"
+                                required="true"
+                            >
+                                <% authors.sort((a, b)=> (a.family_name.toUpperCase() < b.family_name.toUpperCase()) ? -1 : (a.family_name.toUpperCase() > b.family_name.toUpperCase) ? 1 : 0) %>
 
-                                        <% authors.forEach(author=> { %>
-                                            <% if(book) { %>
-                                                <option value=<%= author._id %> selected=<%= author._id.toString()===book.author._id.toString() ? 'selcted' : false %>
-                                                        ><%= author.name %>
-                                                </option>
-                                                <% } else { %>
-                                                    <option value=<%= author._id %>><%= author.name %>
-                                                    </option>
-                                                <% } %>
-                                        <% }) %>
+                                    <% authors.forEach(author=> { %>
+                                        <% if(book) { %>
+                                            <option 
+                                                value=<%= author._id %> 
+                                                selected=<%= author._id.toString()===book.author._id.toString() ? 'selcted' : false %>
+                                            >
+                                                <%= author.name %>
+                                            </option>
+                                            <% } else { %>
+                                                <option value=<%= author._id %>><%= author.name %></option>
+                                        <% } %>
+                                    <% }) %>
                             </select>
                         </div>
                         <div class="form-group">
                             <label for="summary">Summary: </label>
-                            <textarea name="summary" id="summary" rows="1" class="form-control"
-                                required="true">
+                            <textarea 
+                                name="summary" 
+                                id="summary"
+                                class="form-control"
+                                required="true"
+                                rows="1"
+                                cols="1"
+                            >
                                 <%= undefined === book ? '' : book.summary %> 
                             </textarea>
                         </div>
                         
                         <div class="form-group">
                             <label for="isbn">ISBN: </label>
-                            <input type="text" class="form-control" placeholder="ISBN13" name="isbn" required="true"
-                                value=<%= undefined===book ? '' : book.isbn %>>
+                            <input 
+                                type="text" 
+                                class="form-control" 
+                                placeholder="ISBN13" 
+                                name="isbn" 
+                                required="true"
+                                value=<%= undefined===book ? '' : book.isbn %>
+                            >
                         </div>
 
                         <div class="form-group">
@@ -62,8 +81,18 @@
                             <div>
                                 <% genres.forEach(genre => { %>
                                     <div style="display: inline; padding-right:10px;">
-                                        <input type="checkbox" name="genre" checked=<%= genre.checked %> value=<%= genre._id %> id=<%= genre._id %>>
-                                        <label for=<%= genre._id %>><%= genre.name %></label>
+                                        <input 
+                                            type="checkbox" 
+                                            name="genre" 
+                                            checked=<%= genre.checked===undefined ? false : true %> 
+                                            value=<%= genre._id %> 
+                                            id=<%= genre._id %>
+                                        >
+                                        <label 
+                                            for=<%= genre._id %>
+                                        >
+                                            <%= genre.name %>
+                                        </label>
                                     </div>
                                 <% }) %>
                             </div>
