--- a/external-resources/assignments/mdn-express/local-library-tutorial/views/author_delete.ejs
+++ b/external-resources/assignments/mdn-express/local-library-tutorial/views/author_delete.ejs
@@ -11,7 +11,7 @@
                 <h1>Title: <%= author.name %></h1>
                 <p><%= author.lifespan %></p>
 
-                <% if(author_books) { %>
+                <% if(author_books.length) { %>
                     <p><strong>Delete the following books before attempting to delete this author: </strong></p>
                     <div style='margin-left:20px;margin-top:20px;'>
                         <h4>Books</h4>
