started working on bookinstance delete routes
also fixed some bugs and removed few conole logs

--- a/external-resources/assignments/mdn-express/local-library-tutorial/views/book_detail.ejs
+++ b/external-resources/assignments/mdn-express/local-library-tutorial/views/book_detail.ejs
@@ -40,7 +40,7 @@
                             <% } %>
                             <p><strong>ID: </strong><a href=<%= val.url %>><%= val._id %></a></p>
                             <hr>
-                            <p><a href=<%= book.url+"/delete" %>>Delete Book</a></p>
+                            <p><a href=<%= book.url+"/update" %>>Update Book</a></p>
                             <p><a href=<%= book.url+"/delete" %>>Delete Book</a></p>
                         <% }) %>
                     <% } else { %>
