--- a/external-resources/assignments/mdn-express/local-library-tutorial/views/bookinstance_detail.ejs
+++ b/external-resources/assignments/mdn-express/local-library-tutorial/views/bookinstance_detail.ejs
@@ -26,6 +26,9 @@
                         <p><strong>Due Back: </strong><%= bookinstance.due_back_formatted %></p>
                     <% } %>
                 </p>
+
+                <hr>
+                <p><a href=<%= bookinstance._id+"/delete" %>>Delete Book</a></p>
             </div>
         </div>
     </div>
