genre delete implementation done

--- a/external-resources/assignments/mdn-express/local-library-tutorial/views/genre_detail.ejs
+++ b/external-resources/assignments/mdn-express/local-library-tutorial/views/genre_detail.ejs
@@ -22,6 +22,9 @@
                         <p>This genre has no books yet</p>
                     <% } %>
                 </div>
+                <hr>
+                <hr>
+                <a href=<%= genre._id+"/delete" %>  class="btn btn-danger">Delete</a>
             </div>
         </div>
     </div>
