adjusted bookinstance controller code
also started working for author update process as well

--- a/external-resources/assignments/mdn-express/local-library-tutorial/views/bookinstance_form.ejs
+++ b/external-resources/assignments/mdn-express/local-library-tutorial/views/bookinstance_form.ejs
@@ -52,9 +52,24 @@
                     <div class="form-group">
                         <label for="status">Status: </label>
                         <select name="status" id="status" placeholder="Select Status" required="true">
-                            <option <%= selected=bookinstance.status === "Maintainance" ? 'selected' : null %> value="Maintenance">Maintenance</option>
-                            <option <%= selected=bookinstance.status === "Available" ? 'selected' : null %> value="Available">Available</option>
-                            <option <%= selected=bookinstance.status === "Loaned" ? 'selected' : null %> value="Loaned">Loaned</option>
+                            <option 
+                                <%= selected=bookinstance.status === "Maintainance" ? 'selected' : null %> 
+                                value="Maintenance"
+                            >
+                                Maintenance
+                            </option>
+                            <option 
+                                <%= selected=bookinstance.status === "Available" ? 'selected' : null %> 
+                                value="Available"
+                            >
+                                Available
+                            </option>
+                            <option 
+                                <%= selected=bookinstance.status === "Loaned" ? 'selected' : null %> 
+                                value="Loaned"
+                            >
+                                Loaned
+                            </option>
                             <option 
                                 <%= selected = bookinstance.status === "Reserved" ? 'selected' : null %> 
                                 value="Reserved"
