--- a/external-resources/assignments/mdn-express/local-library-tutorial/views/author_detail.ejs
+++ b/external-resources/assignments/mdn-express/local-library-tutorial/views/author_detail.ejs
@@ -27,7 +27,10 @@
                     </dl>
                 </div>
                 <hr>
-                <p><a href=<%= author.url + "/delete" %>>Delete Author</a></p>
+                <hr>
+                    <span><a class="btn btn-warning" href=<%= author.url + "/update" %>>Update Author</a></span>
+                    <span><a class="btn btn-danger" href=<%= author.url + "/delete" %>>Delete Author</a></span>
+                <hr>
             </div>
         </div>
     </div>
