--- a/external-resources/assignments/mdn-express/local-library-tutorial/views/bookinstance_detail.ejs
+++ b/external-resources/assignments/mdn-express/local-library-tutorial/views/bookinstance_detail.ejs
@@ -27,8 +27,8 @@
                     <% } %>
                 </p>
                 <hr>
-                    <span><a class="btn btn-warning" href=<%= bookinstance._id+"/update" %>>Update Book</a></span>
-                    <span><a class="btn btn-danger" href=<%= bookinstance._id+"/delete" %>>Delete Book</a></span>
+                    <span><a class="btn btn-warning" href=<%= bookinstance._id+"/update" %>>Update BookInstance</a></span>
+                    <span><a class="btn btn-danger" href=<%= bookinstance._id+"/delete" %>>Delete BookInstance</a></span>
                 <hr>
             </div>
         </div>
