--- a/external-resources/assignments/mdn-express/local-library-tutorial/views/author_form.ejs
+++ b/external-resources/assignments/mdn-express/local-library-tutorial/views/author_form.ejs
@@ -23,11 +23,13 @@
                     <div class="form-group">
                         <label for="date_of_birth">Date of birth: </label>
                         <!-- <input type="date" name="date_of_birth" id="date_of_birth" value=<\%= author === undefined ? "" : author.date_of_birth %>> -->
-                        <input type="date" name="date_of_birth" id="date_of_birth" value=<%= author === undefined ? "" : author.dob_iso_form %>>
+                        <!-- <input type="date" name="date_of_birth" id="date_of_birth" value=<\%= author === undefined ? "" : author.dob_iso_form %>> -->
+                        <input type="date" name="date_of_birth" id="date_of_birth" value=<%= author?.dob_iso_form %>>
 
                         <label for="date_of_death">Date of death: </label>
                         <!-- <input type="date" name="date_of_death" id="date_of_death" value=<\%= author === undefined ? "" : author.date_of_death %>> -->
-                        <input type="date" name="date_of_death" id="date_of_death" value=<%= author === undefined ? "" : author.dod_iso_form %>>
+                        <!-- <input type="date" name="date_of_death" id="date_of_death" value=<\%= author === undefined ? "" : author.dod_iso_form %>> -->
+                        <input type="date" name="date_of_death" id="date_of_death" value=<%= author?.dod_iso_form %>>
                     </div>
 
                     <button class="btn btn-primary" type="submit">Submit</button>
