genre update implementation done

--- a/external-resources/assignments/mdn-express/local-library-tutorial/views/genre_detail.ejs
+++ b/external-resources/assignments/mdn-express/local-library-tutorial/views/genre_detail.ejs
@@ -24,7 +24,10 @@
                 </div>
                 <hr>
                 <hr>
-                <a href=<%= genre._id+"/delete" %>  class="btn btn-danger">Delete</a>
+                    <span><a class="btn btn-warning" href=<%= genre._id+"/update" %>>Update</a></span>
+                    <span><a class="btn btn-danger" href=<%= genre._id+"/delete" %>>Delete</a></span>
+                <hr>
+                <hr>
             </div>
         </div>
     </div>
