--- a/inventory-app/views/partials/nav.ejs
+++ b/inventory-app/views/partials/nav.ejs
@@ -1,6 +1,7 @@
 <ul class="sidebar-nav list-group">
     <li class="list-group-item"><a href="/catalog">Home</a></li>
     <li class="list-group-item"><a href="/catalog/albums">Albums</a></li>
+    <li class="list-group-item"><a href="/catalog/genres">Genres</a></li>
     <li class="list-group-item"><a href="/catalog/artists">Artists</a></li>
     <li class="list-group-item"><a href="/catalog/tracks">All Tracks</a></li>
 </ul>
