genre detail view done
also added some styling for tables

--- a/inventory-app/views/all-artists.ejs
+++ b/inventory-app/views/all-artists.ejs
@@ -9,7 +9,7 @@
             </div>
             <div class="col">
                 <h1 class="text-primary"><%= title %> </h1>
-                <table class="table table-borderd text-center">
+                <table class="table table-borderd text-center table-hover table-primary">
                     <thead>
                         <tr>
                             <th scope="col" class="text-info">Artist Full Name</th>
