--- a/inventory-app/views/catalog.ejs
+++ b/inventory-app/views/catalog.ejs
@@ -20,7 +20,7 @@
                     <hr>
                     <hr>
                     <h2>Album counts from different Genres: </h2>
-                    <table class="table table-bordered">
+                    <table class="table table-bordered table-primary">
                         <thead class="text-center">
                             <tr>
                                 <% for(let key in results.albums_genres) { %>
