--- a/inventory-app/views/all-albums.ejs
+++ b/inventory-app/views/all-albums.ejs
@@ -9,12 +9,12 @@
             </div>
             <div class="col">
                 <h1><%= title %></h1>
-                <table class="table table-borderd text-center">
+                <table class="table table-borderd text-center table-hover table-primary">
                     <thead>
                         <tr>
-                            <th scope="col">Album Name</th>
-                            <th scope="col">Artist Name</th>
-                            <th scope="col">Album Price</th>
+                            <th class="text-info" scope="col">Album Name</th>
+                            <th class="text-info" scope="col">Artist Name</th>
+                            <th class="text-info" scope="col">Album Price</th>
                         </tr>
                     </thead>
                     <tbody>
