--- a/inventory-app/views/all-tracks.ejs
+++ b/inventory-app/views/all-tracks.ejs
@@ -9,7 +9,7 @@
             </div>
             <div class="col">
                 <h1 class="text-primary"><%= title %></h1>
-                <table class="table table-borderd text-center">
+                <table class="table table-borderd text-center table-hover table-primary">
                     <thead>
                         <tr>
                             <th class="text-info" scope="col">Track Name</th>
