artist detal view done
also addes some styles to genre detail for consistency

--- a/inventory-app/views/all-artists.ejs
+++ b/inventory-app/views/all-artists.ejs
@@ -7,7 +7,7 @@
             <div class="col-sm-2">
                 <%- include("./partials/nav.ejs") %>
             </div>
-            <div class="col">
+            <div class="col-bg-2">
                 <h1 class="text-primary"><%= title %> </h1>
                 <table class="table table-borderd text-center table-hover table-primary">
                     <thead>
